# persistent-agent-runtime

./: .env.localdev.example  .gitignore  .gitleaks.toml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Makefile  PROJECT.md  README.md  STATUS.md  docker-compose.yml
.github/workflows/: ci.yml  offline-llm-eval.yml
POC/langgraph/: .env.example  README.md  agent_task.md  plan.md  poc.py  poc_with_real_llm.py  requirements.txt
design/: DESIGN_NOTES_PHASE2.md  PHASE1_DURABLE_EXECUTION.md  PHASE2_MULTI_AGENT.md
docs/: CONSOLE_BROWSER_TESTING.md  CONSOLE_TASK_CHECKLIST.md  LOCAL_DEVELOPMENT.md  PROJECT.md  README.md
docs/design/: DESIGN_NOTES_PHASE3_PLUS.md  PHASE1_DURABLE_EXECUTION.md  PHASE2_MULTI_AGENT.md
docs/design-docs/: core-beliefs.md  index.md
docs/exec-plans/: README.md  tech-debt-tracker.md
docs/implementation_plan/: README.md
docs/product-specs/: core-concepts.md  index.md  user-stories.md  vision.md
docs/references/: claudecode-compaction-mechanisms.md  opencode-compaction-report.md
experiments/langgraph/: README.md  agent_task.md  plan.md  poc_with_real_llm.py
implementation_plan/: plan.md  progress.md
infrastructure/: README.md
infrastructure/cdk/: cdk.json  (+3 more)
scripts/: dev-stack.sh  init-localstack.sh  local-ci.sh
services/model-discovery/: .dockerignore  Dockerfile  main.py  pyproject.toml
services/worker-service/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  worker.py
services/worker-service/checkpointer/: __init__.py  postgres.py
services/worker-service/config/: model_pricing.json
services/worker-service/core/: agent_runtime_state_repository.py  checkpoint_repository.py  config.py  conversation_log_repository.py  cost_ledger_repository.py  db.py  heartbeat.py  logging.py  memory_repository.py  poller.py  reaper.py  worker.py
services/worker-service/executor/: __init__.py  embeddings.py  graph.py  mcp_session.py  memory_graph.py  providers.py  router.py  schema_converter.py  url_safety.py
services/worker-service/executor/builtin_tools/: __init__.py  recall_tool_result.py
services/worker-service/executor/compaction/: __init__.py  caps.py  defaults.py  ingestion.py  pipeline.py  pre_model_hook.py  state.py  summarizer.py  thresholds.py  tokens.py  tool_result_store.py  transforms.py
services/worker-service/executor/prompt_cache/: __init__.py  anthropic.py  bedrock.py  noop.py  openai.py  strategy.py
services/worker-service/sandbox/: __init__.py  provisioner.py
services/worker-service/scripts/: backfill_convlog_to_task_events.py
services/worker-service/storage/: s3_client.py
services/worker-service/tests/: conftest.py  shape_validator.py  test_agent_decides_commit.py  test_agent_runtime_state_repository_integration.py  test_backfill_convlog_to_task_events.py  test_backoff.py  test_budget_carve_out_end_to_end.py  test_calculator_tool.py  test_checkpoint_repository_integration.py  test_checkpointer.py  test_checkpointer_integration.py  test_compaction_budget_carve_out.py  test_compaction_cache_stability.py  test_compaction_caps.py  test_compaction_chunking.py  test_compaction_cost_ledger.py  test_compaction_defaults.py  test_compaction_exclude_tools.py  test_compaction_ingestion_offload.py  test_compaction_memory_disabled_no_flush.py  test_compaction_observability.py  test_compaction_pipeline.py  test_compaction_pipeline_review_fixes.py  test_compaction_pre_tier3_flush.py  test_compaction_pre_tier3_flush_redrive.py  test_compaction_shape_property.py  test_compaction_state_reducers.py  test_compaction_summarizer.py  test_compaction_summarizer_caps.py  test_compaction_summary_marker_append.py  test_compaction_thresholds.py  test_compaction_tier3_second_firing_boundary.py  test_compaction_tier3_tool_boundary.py  test_compaction_tokens.py  test_compaction_transforms_clear.py  test_compaction_transforms_truncate.py  test_config.py  test_conversation_log_integration.py  test_conversation_log_repository.py  test_cost_ledger_integration.py  (+51 more)
services/worker-service/tests/fixtures/: custom_tool_test_server.py  http_test_server.py  stdio_test_server.py
services/worker-service/tests/storage/: test_s3_client.py
services/worker-service/tests/tools/: test_upload_artifact.py
services/worker-service/tests_offline/: README.md  __init__.py  _budget_guard.py  conftest.py  test_main_path_shape_through_compactions.py  test_memory_flush_and_dead_letter.py  test_multi_provider_smoke.py  test_offload_recall_roundtrip.py  test_research_task_large_context.py  test_tool_use_pairing_through_compaction.py
services/worker-service/tools/: README.md  app.py  definitions.py  errors.py  memory_tools.py  read_url.py  runtime_logging.py  sandbox_tools.py  server.py  task_history_reader.py  upload_artifact.py
services/worker-service/tools/providers/: __init__.py  search.py
src/worker-service/: README.md  pyproject.toml  worker_integration_test.py
src/worker-service/checkpointer/: postgres.py
src/worker-service/core/: __init__.py  config.py  heartbeat.py  poller.py  reaper.py  worker.py
src/worker-service/executor/: __init__.py  graph.py
src/worker-service/tests/: conftest.py  test_checkpointer_integration.py  test_config.py  test_executor.py  test_integration.py  test_mcp_server.py  test_metrics.py  test_poller.py  test_queries.py  test_reaper.py  test_semaphore.py  test_web_search_tool.py
src/worker-service/tools/: README.md  __init__.py  app.py  calculator.py  definitions.py  env.py  read_url.py  sample_client.py
tests/: test_discover_models.py  test_e2e_infra_regressions.py
(+558 files in other folders)
