[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-discovery"
version = "0.1.0"
description = "Cloud-Native Persistent Agent Runtime - Model Discovery Service"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1.0",
]
