[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worker-service"
version = "0.1.0"
description = "Cloud-Native Persistent Agent Runtime - Worker Service Core"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29.0",
    "beautifulsoup4>=4.13.0",
    "boto3>=1.35.0",
    "tavily-python>=0.5.0",
    "e2b-code-interpreter>=1.2.0",
    "httpx>=0.28.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-aws>=0.2.0",
    "langfuse==4.0.1",
    "langgraph==1.0.5",
    "langgraph-prebuilt==1.0.8",
    "langgraph-checkpoint==3.0.1",
    "langgraph-checkpoint-postgres==3.0.4",
    "mcp==1.26.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.11.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "hypothesis>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Default collection roots — explicitly excludes ``tests_offline/`` so per-commit
# runs (`pytest`, `pytest tests/`, `make worker-test`) never pick up the
# real-provider offline eval suite. The offline suite opts-in via an explicit
# path: ``pytest tests_offline/ -m offline``.
testpaths = ["tests"]
# Belt-and-suspenders: even if someone passes ``--collect-only`` without a
# path, ignore the offline directory to stop accidental real-provider calls.
# Include pytest's default ignores (``.*``, ``build``, ``dist``, etc.) and
# the hypothesis plugin's ``.hypothesis`` dir explicitly, because setting
# ``norecursedirs`` replaces rather than extends pytest's defaults.
norecursedirs = [
    "tests_offline",
    ".venv",
    "node_modules",
    ".*",
    "build",
    "dist",
    "CVS",
    "_darcs",
    "{arch}",
    "*.egg",
    ".hypothesis",
]
markers = [
    "offline: real-provider offline evaluation suite (scheduled only; never on per-commit CI)",
]
filterwarnings = [
    "ignore:Core Pydantic V1 functionality isn't compatible with Python 3.14:UserWarning",
    "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning",
    "ignore:The function `loads` is in beta:Warning"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "checkpointer*", "tools*", "storage*", "sandbox*"]
