[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worker-service"
version = "0.1.0"
description = "Cloud-Native Persistent Agent Runtime - Worker Service Core"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29.0",
    "beautifulsoup4>=4.13.0",
    "httpx>=0.28.0",
    "langgraph==1.0.5",
    "langgraph-checkpoint==3.0.1",
    "langgraph-checkpoint-postgres==3.0.4",
    "mcp==1.26.0",
    "pydantic>=2.11.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "checkpointer*", "tools*"]
